[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesomebybit"
description = "Awesome async lib for working with ByBit!"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Irrenriel"}
]
maintainers = [
    { name = "Irrenriel"}
]
keywords = [
    "bybit",
    "async",
    "api"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "aiohttp>=3.9.3",
    "pydantic>=2.5.3"
]
dynamic = ["version"]

[tool.hatch.version]
path = "AwesomeByBit/__meta__.py"

[project.urls]
Repository = "https://github.com/Irrenriel/AwesomeByBit"

[tool.ruff]
src = ["AwesomeByBit"]
